--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,11 @@ sourceCompatibility = '1.8'
 repositories {
     mavenCentral()
 }
+
 task genJaxb {
     ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
     ext.classesDir = "${buildDir}/classes/jaxb"
-    ext.schema = "src/main/resources/countries.xsd"
+    ext.schema = "http://www.dneonline.com/calculator.asmx?wsdl"
 
     outputs.dir classesDir
 
@@ -55,8 +56,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'wsdl4j:wsdl4j:1.6.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation 'javax.activation:activation:1.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.0'
     jaxb("org.glassfish.jaxb:jaxb-xjc:2.2.11")
-    compile(files(genJaxb.classesDir).builtBy(genJaxb))
+//    compile(files(genJaxb.classesDir).builtBy(genJaxb))
+    testImplementation('junit:junit:4.13')
+    testImplementation 'org.springframework.ws:spring-ws-test:3.0.8.RELEASE'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
